--- a/themes/nostyle/layouts/partials/post_list.html
+++ b/themes/nostyle/layouts/partials/post_list.html
@@ -2,17 +2,14 @@
 {{- $posts = site.RegularPages }}
 
 <section id="suggest">
-    <!-- <header class="voltar"> -->
-    <button class="close" onclick="window.history.go(-1);" aria-label="Back" rel="prev">
-        <span class="fa fa-arrow-left"></span>&nbsp;<span>Voltar</span>
+    <button class="close" onclick="window.open('/#suggest');" aria-label="Back" rel="prev">
+        <span class="fa fa-arrow-left"></span>
     </button>
-    <!-- </header> -->
 
     <div class="container col center-itens">
         <h2 class="suggest">Mais algumas sugestões de Presentes</h2>
         <p class="center">
-            Apresentamos aqui uma lista mais extensa de opções de presentes,
-            caso você queira nos presentear algo.
+            Apresentamos aqui mais algumas sugestões de presentes para aumentar o seu leque de opções.
         </p>
     </div>
 
