--- a/themes/nostyle/layouts/partials/video.html
+++ b/themes/nostyle/layouts/partials/video.html
@@ -1,15 +1,6 @@
-<style>
-    .video {
-        padding-top: 20px;
-        display: flex;
-        justify-content: center;
-        align-content: center;
-    }
-</style>
-
 <h2>Assista ao vivo</h2>
 
-<div class="video">
+<div id="video">
     <a href="https://www.youtube.com/@CasamentoLueKaio" target="_blank">
         <img src="/images/video.png" alt="tabnail video">
     </a>
