--- a/static/css/history.css
+++ b/static/css/history.css
@@ -1,6 +1,7 @@
 #history {
     background-image: url('/images/dragao-raposa.png');
-    background-position: center top;
+    background-position-x: center;
+    background-position-y: 50px;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 63%;
