--- a/static/css/base.css
+++ b/static/css/base.css
@@ -66,7 +66,7 @@ img {
     }
 }
 
-@media(width >=1400px) {
+/* @media(width >=1400px) {
     .content {
         padding: 0 10vw;
     }
@@ -76,7 +76,7 @@ img {
     .content {
         padding: 0 25vw;
     }
-}
+} */
 
 .container {
     position: relative;
