--- a/static/css/history.css
+++ b/static/css/history.css
@@ -18,7 +18,7 @@
 .history-text {
     position: static;
     top: 0;
-    margin: 10px 10vw;
+    margin: 10px 28%;
     padding-left: 3em;
     background-color: transparent;
 
@@ -30,9 +30,9 @@
 
     & .message {
         position: relative;
+        padding: 0;
 
         & p {
-            padding: 0 7em;
             font-size: 1.2rem;
             text-align: center;
         }
@@ -41,12 +41,12 @@
 
 @media (width <=768px) {
     .history-text {
-        margin: 10px 13vw;
+        margin: 10%;
         padding-left: 1em;
 
         & .message p {
-            /* padding: 0.6em 1em; */
-            padding: 0;
+
+            padding-left: 8%;
             font-size: 1rem;
         }
 
