--- a/static/css/info.css
+++ b/static/css/info.css
@@ -25,10 +25,15 @@
 
 @media(width <=768px) {
     .cards.info {
-        padding: 1vw 2vw;
         display: flex;
         flex-direction: column;
+        justify-content: center;
         align-items: center;
+        justify-items: center;
+        align-items: center;
+        text-align: left;
+
+        padding: 1vw 2vw;
         background-color: transparent;
 
         & .title {
