--- a/static/css/info.css
+++ b/static/css/info.css
@@ -1,14 +1,11 @@
 .content.info {
     position: relative;
-    /* padding: 0 5vw; */
 }
 
 .cards.info {
     display: grid;
     grid-template-columns: 1.6fr 1fr 1fr;
-    /* justify-content: end; */
     align-items: center;
-    /* justify-items: end; */
     text-align: left;
     padding: 25px 0px;
 
@@ -28,13 +25,9 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
         justify-items: center;
-        align-items: center;
-        text-align: left;
-
+        text-align: center;
         padding: 1vw 2vw;
-        background-color: transparent;
 
         & .title {
             justify-self: center;
