--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,8 +5,6 @@
 
     --bg-menu: hsl(from var(--bg-color) h s calc(l - 47) / 45%);
     --border-color: hsl(from var(--bg-color) h s calc(l + 20));
-    --btn-mute: hsl(from var(--mute-color) h s calc(l + 20));
-    --bg-input: hsl(from var(--bg-color) h s calc(l + 1.5));
 
     --text-color: #fffcea;
     --text-inverse-color: var(--bg-color);
@@ -244,7 +242,8 @@ a {
     flex-flow: row wrap;
     width: 100%;
     padding: 25px 0px;
-    margin: 30px auto;
+    /* margin: 30px auto; */
+    margin: 10px auto;
     gap: 20px;
 
     &.grid {
@@ -266,6 +265,10 @@ a {
     min-width: 380px;
     padding: 20px;
     border-radius: 10px;
+
+    &.mini {
+        min-width: 200px;
+    }
 
     & .image {
         position: static;
