--- a/static/css/suggest.css
+++ b/static/css/suggest.css
@@ -5,6 +5,10 @@
         padding: 0 5px;
     }
 
+    & .tag {
+        padding-top: 20px;
+    }
+
     & .close {
         padding: 20px;
         color: var(--text-color);
@@ -21,6 +25,10 @@
     grid-template-columns: 1fr 1fr 1fr;
     text-align: left;
     padding: 25px 0px;
+
+    &.mini {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 
     & .image {
         width: 100%;
