Adicionar efeito no botao

--- a/themes/nostyle/layouts/partials/suggest.html
+++ b/themes/nostyle/layouts/partials/suggest.html
@@ -39,6 +39,6 @@
         {{ end }}
     </div>
 
-    <a class="button" href="/posts" target="_self">Ver mais sugestões de presentes</a>
+    <a id="more" class="button pulse" href="/posts" target="_self">Ver mais sugestões de presentes</a>
     <hr>
 </section>
