--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -86,4 +86,20 @@ a.button {
         background-color: var(--btn-disabled);
         cursor: not-allowed;
     }
+
+    &.pulse {
+        animation: pulse 1.3s 2 alternate ease-in-out;
+    }
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.05);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
