--- a/themes/nostyle/layouts/partials/menu.html
+++ b/themes/nostyle/layouts/partials/menu.html
@@ -1,5 +1,6 @@
 <div class="content">
     <nav>
+        <img class="logo-sm" src="{{ $.Site.Params.logotipo | relURL}}" alt="logotipo">
         <ul class="nav-links">
             <li class="logo">
                 <img src="{{ $.Site.Params.logotipo | relURL}}" alt="logotipo">
