--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -15,6 +15,7 @@ form {
     }
 
     & input {
+        min-width: 250px;
         height: 2.5rem;
         padding: 0 10px;
         outline: none;
