--- a/themes/nostyle/layouts/partials/dialog.html
+++ b/themes/nostyle/layouts/partials/dialog.html
@@ -50,7 +50,8 @@
             <textarea name="message" class="form-control" rows="3" placeholder="Envie uma mensagem para os noivos"
               required></textarea>
 
-            <input type="submit" value="Efetuar o pagamento" class="form-control">
+            <!-- <input type="submit" value="Efetuar o pagamento" class="form-control" onsubmit="presentear(event)"> -->
+            <a class="button" onclick="efetuarPagamento(event)">Efetuar o pagamento</a>
           </form>
         </div>
       </div>
