Verificar campo em branco

--- a/themes/nostyle/layouts/partials/dialog.html
+++ b/themes/nostyle/layouts/partials/dialog.html
@@ -31,7 +31,8 @@
 
               <div>
                 <label>Nome</label>
-                <input type="text" placeholder="Informe seu nome aqui" name="user_name" class="form-control" required>
+                <input id="name" type="text" placeholder="Informe seu nome aqui" name="user_name" class="form-control"
+                  required>
               </div>
 
               <div>
