--- a/themes/nostyle/layouts/posts/list.html
+++ b/themes/nostyle/layouts/posts/list.html
@@ -16,6 +16,10 @@
 
         {{- partial "dialog.html" . -}}
 
+        <div id="toast" class="">
+            <!-- Exibir mensagem -->
+        </div>
+
     </body>
 
 </html>
