Adicionar contagem regressiva

--- a/themes/nostyle/layouts/partials/head.html
+++ b/themes/nostyle/layouts/partials/head.html
@@ -31,12 +31,12 @@
     </script>
 
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Lancelot&family=MonteCarlo&family=UnifrakturCook:wght@700&display=swap"
         rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=MonteCarlo&family=Saira+Condensed:wght@100..900&display=swap"
-        rel="stylesheet">
+
     <link
-        href="https://fonts.googleapis.com/css2?family=Lancelot&family=MonteCarlo&family=Saira+Condensed:wght@100..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Lancelot&family=MonteCarlo&family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
         rel="stylesheet">
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" rel="stylesheet">
 </head>
