--- a/static/css/hero.css
+++ b/static/css/hero.css
@@ -8,10 +8,8 @@
         top: 0;
         left: 0;
         width: inherit;
-        /* padding: 33% 10%; */
-        padding: 0 10%;
-        padding-top: 33%;
-
+        padding: 31% 10% 0;
+        /* padding: 33% 10% 0; */
         background-size: cover;
     }
 
@@ -36,15 +34,22 @@
     }
 
     & h1 {
-        /* font-size: clamp(3rem, 6vw + 1.5rem, 9rem); */
         font-size: 8rem;
     }
 
     & h2 {
         font-family: "Lancelot", serif;
         font-size: 2.5rem;
-        /* font-size: clamp(1rem, 1.5vw + 0.7rem, 4rem); */
-        /* line-height: 90%; */
+
+        &.h1 {
+            font-style: italic;
+            font-size: 2rem;
+        }
+
+        &.h1 span {
+            font-family: "EB Garamond", serif;
+            font-size: 2.5rem;
+        }
     }
 }
 
@@ -56,10 +61,14 @@
 
         & h2 {
             font-size: 1rem !important;
+
+            &.h1 span {
+                font-size: 1.3rem;
+            }
         }
 
         & .cover {
-            padding-top: 27%;
+            padding-top: 25%;
         }
 
     }
