--- a/static/css/history.css
+++ b/static/css/history.css
@@ -10,9 +10,9 @@
         background-color: transparent;
     }
 
-    @media (width <= 768px){
+    @media (width <=768px) {
         background-position-y: 15vh;
-         background-size: 100%;
+        background-size: 100%;
     }
 }
 
@@ -20,7 +20,7 @@
     position: static;
     top: 0;
     margin: 10px 28%;
-    padding-left: 3em;
+    /* padding-left: 3em; */
     background-color: transparent;
 
     & .title {
@@ -43,11 +43,12 @@
 @media (width <=768px) {
     .history-text {
         margin: 10%;
-        padding-left: 1em;
+        /* padding-left: 1em; */
 
         & .message p {
 
-            padding-left: 8%;
+            padding: 0 5%;
+            /* padding: 8%; */
             font-size: 1rem;
         }
 
